add css styling and click and view counter in js, add results and add css styling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
         <img >
         
     </section>
+    <section>
+        <p>Click on the image of the product you would most like to see created!</p>
+    </section>
+    <div>Get Results</div>
+    <ul></ul>
     
    </main>
-   <footer></footer>
+   <footer> Odd Duck Ltd </footer>
    <script src="app.js"></script>
 </body>
 </html>
