--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lab 11: Odd Duck Projects</title>
     <meta name="description" content="Lab 11: Odd Duck Projects">
     <link rel="stylesheet" href ="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
 <body>
@@ -24,7 +25,10 @@
         <p>Click on the image of the product you would most like to see created!</p>
     </section>
     <div>Get Results</div>
-    <ul></ul>
+    <!-- <ul></ul> -->
+    <div>
+        <canvas id="chart"></canvas>
+    </div>
     
    </main>
    <footer> Odd Duck Ltd </footer>
