add css styling

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 11: Odd Duck Projects</title>
     <meta name="description" content="Lab 11: Odd Duck Projects">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href ="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
 <body>
    <header>
-    <h1>Odd Duck Products</h1>
+    <a href="index.html"><img src="assets/duck-logo.png" alt="odd duck logo"></a>
+    <a href="index.html"><h1>Odd Duck Products</h1></a>
+
    </header> 
    <main class ="main-container">
     <section>
@@ -31,7 +37,7 @@
     </div>
     
    </main>
-   <footer> Odd Duck Ltd </footer>
+   <footer> &copy; Odd Duck Ltd | 2023</footer>
    <script src="app.js"></script>
 </body>
 </html>
