make js copy to tidy up main app.js and code to stop repeating images

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div>
         <canvas id="chart"></canvas>
     </div>
+    <!-- <div>
+        <canvas id="pie-chart"></canvas>
+    </div> -->
+    
     
    </main>
    <footer> &copy; Odd Duck Ltd | 2023</footer>
