--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     
    </main>
    <footer> &copy; Odd Duck Ltd | 2023</footer>
+   <!-- <script src="app.js"></script> -->
    <script src="app.js"></script>
 </body>
 </html>
